# android-logcat-otel

./: .gitignore  Cargo.toml  README.md
src/: feature.rs  lib.rs  main.rs  model.rs  prelude.rs
src/feature/: otel.rs
src/model/: logcat_line.rs
