[package]
name = "android-logcat-otel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.86"
clap = { version = "=4.5.11", features = ["derive"] }
clap_complete = "=4.5.11"
reqwest = "=0.12.5"
opentelemetry = { version = "=0.24.0", default-features = false }
opentelemetry_sdk = { version = "=0.24.1", default-features = false, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "=0.17.0", default-features = false, features = ["http-proto", "logs", "reqwest-client"] }
opentelemetry-appender-tracing = { version = "=0.5.0", default-features = false }
opentelemetry-semantic-conventions = "=0.16.0"
regex = "=1.10.5"
tokio = { version = "=1.39.2", features = ["macros", "process", "rt-multi-thread", "signal"] }
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
url = "=2.5.2"
